--- a/src/App.css
+++ b/src/App.css
@@ -374,3 +374,8 @@ a{
   margin-top: -1px;
 }
 /*  --------------- END SortedInstructorsCard COMPONENT --------------- */
+
+
+/*  --------------- START AppjamSortedRosterPage COMPONENT --------------- */
+
+/*  --------------- END AppjamSortedRosterPage COMPONENT --------------- */
