added roster table for schools

--- a/src/pages/manual.css
+++ b/src/pages/manual.css
@@ -103,7 +103,7 @@ label {
     border-radius: 0px 3px 3px 0px;
     color: #9097A3;
     float: left;
-    width: 2vw;
+    width: 100px;
     height: auto;
     text-align: center;
 }
