added lock/unlock api and code cleanup (deleted unnecessary comments)

--- a/src/App.css
+++ b/src/App.css
@@ -358,7 +358,7 @@ a{
   flex-direction: column;
 	justify-content: center;
   align-items: center;
-  height: 70px;
+  height: 48px;
   width: 68px;
   background-color: #FFFFFF;
   border-radius: 10px;
@@ -389,6 +389,8 @@ a{
 
 .lockBtn{
  color: #0099FF;
+ border-top-left-radius: 10px;
+ border-top-right-radius: 10px;
 }
 
 .deleteBtn{
