--- a/src/pages/manual.css
+++ b/src/pages/manual.css
@@ -75,20 +75,29 @@ label {
     padding-right: 5vh;
 }
 
-.two_cols {
-    column-count: 2;
-}
-
-.radio-toolbar input[type="radio"] {
+.verticle_grid input[type = "radio"]{
+    display: grid;
+    grid-template-columns: auto;
+    padding-top: 1vh;
+    padding-left: 5vh;
+    padding-right: 5vh;
     opacity: 0;
     position: fixed;
     width: 0;
 }
 
+.two_cols {
+    column-count: 2;
+}
+.radio-toolbar input[type="radio"] {
+    opacity: 0;
+    position: fixed;
+    width: 0;
+}
 .radio-toolbar input[type="checkbox"] {
     opacity: 0;
     position: fixed;
-    width:0
+    width:0;
 }
 
 .radio-toolbar label {
