--- a/client/src/components/Navbar.scss
+++ b/client/src/components/Navbar.scss
@@ -1,5 +1,5 @@
 .navbar {
-  height: 10vh;
+  height: 8vh;
   width: 100%;
   background: white;
   box-shadow: 0px 5px 40px rgba(0, 0, 0, 0.05);
@@ -10,9 +10,13 @@
   margin-left: 2rem;
 }
 
+.nav-logo {
+  height: 4vh;
+}
+
 .nav-link {
-  font-weight: 600;
-  font-size: 18px;
+  font-weight: 500;
+  font-size: 16px;
   color: #212529 !important;
   margin-right: 2rem;
 }
