--- a/client/src/pages/ProgramsPage/OptionsBar.scss
+++ b/client/src/pages/ProgramsPage/OptionsBar.scss
@@ -1,13 +1,86 @@
+
 .programs_page {
   display: flex;
+  background: #f5f7fb;
+  height: 100vh;
+
 
   .program-gallery_container {
-    width: 75vw;
+    width: 100vw;
+    padding:2rem;
 
-    .option-bar_container {
-      display: flex;
-      padding: 3rem 5rem;
+    .option-bar-container {
+      //padding: 2rem;
+      //margin: 2rem;
+
+      .dropdown-view{
+        margin: 2rem;
+
+      }
+      .dropdown-filter{
+        margin: 2rem;
+        left:-5vw;
+      }
+
+      .dropdown-label-view {
+        margin-right: 1vw;
+        margin-top: .5rem;
+        font-family: Montserrat;
+        font-style: normal;
+        font-weight: 600;
+        font-size: 20px;
+        line-height: 24px;
+      }
+
+      .dropdown-label-filter {
+
+        margin-right: 1rem;
+        margin-top: .5rem;
+        font-family: Montserrat;
+        font-style: normal;
+        font-weight: 600;
+        font-size: 20px;
+        line-height: 24px;
+      }
+
+      #selector{
+        width: auto;
+        background: #FFFFFF;
+        border-radius: 10px;
+        border: none;
+        font-family: Montserrat;
+
+        font-weight: 300;
+        font-size: 20px;
+        color: #000000;
+        box-shadow:  7px 7px 14px #eaeaea;
+      }
+
+      .selector-menu{
+        margin-top: 10px;
+        border-radius: 10px;
+        border: none;
+        font-family: Montserrat;
+        font-size: 18px;
+        box-shadow:  7px 7px 14px #bfbfbf;
+      }
+
+      .add-button{
+        margin: 2rem;
+        min-width: 200px;
+        max-height: 50px;
+        background: #4B4B92;
+        border-radius: 10px;
+        border: none;
+        font-family: Montserrat;
+        font-style: normal;
+        font-weight: 300;
+        font-size: 20px;
+        margin-left: 3vw;
+
+      }
     }
+  }
 
     .program-gallery {
       display: flex;
@@ -16,10 +89,7 @@
   }
 
   .program-side-info_container {
-    width: 25vw;
-    height: 100vw;
-    background-color: blue;
+    width: 40vw;
+    height: auto;
+    background-color: #ffffff;
   }
-
-
-}
