uhhh instructor page is 90% done???

--- a/client/src/components/Navbar.scss
+++ b/client/src/components/Navbar.scss
@@ -1,5 +1,7 @@
+@import '../DesignSystem';
+
 .navbar {
-  height: 10vh;
+  height: $NAVBAR_HEIGHT;
   width: 100%;
   background: white;
   box-shadow: 0px 5px 40px rgba(0, 0, 0, 0.05);
