--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family: 'Montserrat', 'Rubik', sans-serif;
+  font-family: 'Rubik', 'Montserrat', sans-serif !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
