--- a/client/src/pages/SorterPage/Sidebar.scss
+++ b/client/src/pages/SorterPage/Sidebar.scss
@@ -2,26 +2,78 @@
   position: sticky;
   right: 0;
   top: 0;
-  text-align: center;
+  padding: 1rem;
+
+  .title {
+    font-weight: bold;
+    font-size: 28px;
+    margin-top: 2rem;
+    color: #212529;
+    text-align: left;
+  }
+  
+  .search {
+    margin: 2rem 0rem;
+
+    .search-bar {
+      background-color: #F2F5F7;
+      border-radius: 10px;
+      border: none;
+    }
+
+    .search-btn {
+      background-color: #0099FF;
+      border-radius: 0px 10px 10px 0px;
+    }
+  }
+
+  .filter-btn {
+    background-color: #FFFFFF;
+    border-color: #4B4B92;
+    border-width: 2px;
+    color: #4B4B92;
+    border-radius: 10px;
+    padding: 10px 15px;
+    width: 80px;
+    height: 40px;
+    margin-right: 15px;
+    font-size: 14px;
+    font-weight: 600;
+    margin-bottom: 1rem;
+  }
+
+  .filter-btn:hover {
+    background-color: #4B4B92;
+    color: #FFFFFF;
+  }
+  
+  .add-instructor-btn {
+    background-color: #4B4B92;
+    border-radius: 10px;
+    padding: 10px 15px;
+    width: 160px;
+    height: 40px;
+    font-size: 14px;
+    font-weight: 600;
+    margin-bottom: 1rem;
+  }
+
+  .add-instructor-btn:hover {
+    background-color: #FFFFFF;
+    border-color: #4B4B92;
+    border-width: 2px;
+    color: #4B4B92;
+  }
+  
+  .instructor_container {
+    background-color: #F2F5F7;
+    margin-bottom: 1rem;
+    border-radius: 10px;
+    height: 5vh;
+    color: #202E47;
+    font-weight: 600;
+    font-size: 18px;
+    padding: 10px 20px;
+  }
 }
 
-.title {
-  font-weight: bold;
-  font-size: 28px;
-  margin-top: 2rem;
-  color: #212529;
-}
-
-.search {
-  margin-top: 2rem;
-}
-
-.add-instructor-btn {
-  margin-top: 1rem;
-}
-
-.filter-by {
-  margin-top: 1rem;
-  font-size: 16px;
-  text-align: left;
-}
