--- a/client/src/pages/ProgramsPage/OptionsBar.scss
+++ b/client/src/pages/ProgramsPage/OptionsBar.scss
@@ -89,7 +89,7 @@
   }
 
   .program-side-info_container {
-    width: 40vw;
+    width: 550px;
     height: auto;
     background-color: #ffffff;
   }
