Update instructor cards

--- a/client/src/pages/SorterPage/Sidebar.scss
+++ b/client/src/pages/SorterPage/Sidebar.scss
@@ -70,7 +70,7 @@
     background-color: #F2F5F7;
     margin-bottom: 1rem;
     border-radius: 10px;
-    height: 5vh;
+    height: auto;
     color: #202E47;
     font-weight: 600;
     font-size: 18px;
