--- a/client/src/pages/SorterPage/ProgramModule.scss
+++ b/client/src/pages/SorterPage/ProgramModule.scss
@@ -53,14 +53,19 @@
     color: #202E47;
     font-weight: bold;
     font-size: 22px;
-    padding: 2rem;
+    padding: 2rem 2rem 0rem;
+  }
+
+  .info {
+    padding-bottom: 1rem;
+    margin-left: 2rem;
   }
 
   .instructor_container {
     background-color: #F2F5F7;
     margin: 0rem 2rem 1rem 2rem;
     border-radius: 10px;
-    height: 5vh;
+    height: auto;
     color: #202E47;
     font-weight: 600;
     font-size: 18px;
