--- a/client/src/pages/SorterPage/Sidebar.scss
+++ b/client/src/pages/SorterPage/Sidebar.scss
@@ -2,7 +2,7 @@
   position: sticky;
   right: 0;
   top: 0;
-  padding: 1rem;
+  padding: 1rem 2rem;
 
   .title {
     font-weight: bold;
@@ -14,7 +14,7 @@
   
   .search {
     margin: 2rem 0rem;
-    width: 17vw !important;
+    width: auto !important;
 
     .search-bar {
       background-color: #F2F5F7;
@@ -25,6 +25,8 @@
     .search-btn {
       background-color: #0099FF;
       border-radius: 0px 10px 10px 0px;
+      border: none;
+      width: 3rem;
     }
   }
 
@@ -35,7 +37,7 @@
     color: #4B4B92;
     border-radius: 10px;
     padding: 10px 15px;
-    width: 6vw;
+    width: 5.5vw;
     height: 40px;
     margin-right: 1rem;
     margin-bottom: 1rem;
@@ -52,7 +54,7 @@
     background-color: #4B4B92;
     border-radius: 10px;
     padding: 10px 15px;
-    width: 10vw;
+    width: 9vw;
     height: 40px;
     font-size: 14px;
     font-weight: 600;
