--- a/client/src/pages/SorterPage/Sidebar.scss
+++ b/client/src/pages/SorterPage/Sidebar.scss
@@ -37,7 +37,7 @@
     color: #4B4B92;
     border-radius: 10px;
     padding: 10px 15px;
-    width: 5.5vw;
+    width: 6.5rem;
     height: 40px;
     margin-right: 1rem;
     margin-bottom: 1rem;
@@ -54,11 +54,12 @@
     background-color: #4B4B92;
     border-radius: 10px;
     padding: 10px 15px;
-    width: 9vw;
+    width: 11rem;
     height: 40px;
     font-size: 14px;
     font-weight: 600;
     margin-bottom: 1rem;
+    border: none;
   }
 
   .add-instructor-btn:hover {
