fix drag and drop

--- a/client/src/pages/SorterPage/Sidebar.scss
+++ b/client/src/pages/SorterPage/Sidebar.scss
@@ -69,7 +69,7 @@
     color: #4B4B92;
   }
   
-  .instructor_container {
+  .instructor {
     background-color: #F2F5F7;
     margin-bottom: 1rem;
     border-radius: 10px;
