--- a/client/src/pages/SorterPage/Partner.scss
+++ b/client/src/pages/SorterPage/Partner.scss
@@ -17,7 +17,7 @@
     margin-left: 2rem;
   }
 
-  .instructor_container {
+  .instructor {
     background-color: #F2F5F7;
     margin: 0rem 2rem 1rem 2rem;
     border-radius: 10px;
