demo demo demo demo demo

--- a/client/src/pages/InstructorsPage/Instructors.scss
+++ b/client/src/pages/InstructorsPage/Instructors.scss
@@ -1,14 +1,19 @@
 @import '../../DesignSystem';
 
+.instructors_page {
+  display: flex;
+  background: #F5F7FB;
+  height: calc(100vh - #{$NAVBAR_HEIGHT});
+  overflow: hidden;
+
+  .instructor-list_container {
+    width: 100%;
     .instructor_toolbar {
       display: flex;
       padding: 3rem 5rem;
     }
     .instructor_table {
       padding: 0 5rem;
-      overflow-y: scroll;
-      height: 100%;
-      padding-bottom: 11rem;
 
       table {
         text-align: center;
@@ -32,7 +37,17 @@
           }
         }
       }
+    }
+  }
 
+  .instructor-side-info_container {
+    width: 550px;
+    height: 100%;
+    background-color: white;
+    text-align: center;
+    overflow-y: scroll;
+    .instructor-side-info {
+      margin: 1.5rem 0;
       .badge {
         margin: 0.2rem;
         font-weight: 400;
@@ -60,3 +75,5 @@
         }
       }
     }
+  }
+}
