--- a/client/src/design-system/navbar/Navbar.scss
+++ b/client/src/design-system/navbar/Navbar.scss
@@ -1,32 +1,25 @@
-@import '../DesignSystem';
-
 .navbar {
-  height: $NAVBAR_HEIGHT;
+  height: 85px;
   width: 100%;
   background: white;
   box-shadow: 0px 5px 40px rgba(0, 0, 0, 0.05);
   font-family: Montserrat;
 }
-
 .nav-brand {
   margin-left: 2rem;
 }
-
 .nav-logo {
   height: 30px;
 }
-
 .nav-link {
   font-weight: 500;
   font-size: 16px;
   color: #212529 !important;
   margin-right: 2rem;
 }
-
 .nav-link:hover {
   color: #0099FF !important;
 }
-
 .season-selector {
   margin-right: 2rem;
 }
