--- a/client/src/pages/SorterPage/Sorter.scss
+++ b/client/src/pages/SorterPage/Sorter.scss
@@ -17,7 +17,7 @@
   .sidebar-wrapper {
     min-width: 350px;
     background: white;
-    filter: drop-shadow(5px 0px 40px rgba(0, 0, 0, 0.05));
+    // filter: drop-shadow(5px 0px 40px rgba(0, 0, 0, 0.05));
     width: 20%;
     height: 100%;
     background-color: white;
