--- a/client/src/pages/SorterPage/Main/Partner.scss
+++ b/client/src/pages/SorterPage/Main/Partner.scss
@@ -3,7 +3,7 @@
   margin: 1rem;
   border-radius: 10px;
   padding-bottom: 1rem;
-  width: 20vw;
+  width: 20rem;
 
   .partner-name {
     color: #202E47;
