change partner/session to class

--- a/client/src/pages/SorterPage/Main/Program.scss
+++ b/client/src/pages/SorterPage/Main/Program.scss
@@ -47,7 +47,7 @@
   visibility: hidden;
 }
 
-.partners-container {
+.classes-container {
   background-color: rgba(221, 223, 226, 0.80);;
   border: none !important;
   display: flex;
