--- a/client/src/pages/SorterPage/Main/Class.scss
+++ b/client/src/pages/SorterPage/Main/Class.scss
@@ -1,4 +1,4 @@
-.partner {
+.class {
   background-color: #FFFFFF;
   margin: 1rem;
   border-radius: 10px;
@@ -12,7 +12,7 @@
     padding: 2rem 2rem 0rem;
   }
 
-  .partner-info {
+  .class-info {
     padding-bottom: 1rem;
     margin-left: 2rem;
   }
