--- a/client/src/pages/SorterPage/Instructor.scss
+++ b/client/src/pages/SorterPage/Instructor.scss
@@ -1,10 +1,28 @@
 .instructor {
+  background-color: #F2F5F7;
+  margin: 0rem 2rem 1rem 2rem;
+  border-radius: 10px;
+  height: auto;
+  width: auto;
+  color: #202E47;
+  font-weight: 600;
+  font-size: 18px;
+  padding: 10px 20px;
+  &:hover {
+    background-color: #e7e9eb;
+  }
 
   .name {
     color: #202E47;
     font-size: 18px;
     font-weight: 600;
     margin-bottom: 1rem;
+  }
+
+  .lock {
+    float: right;
+    padding: -1rem;
+    z-index: 2;
   }
 
   .tags {
@@ -30,7 +48,6 @@
 
   .availability h5 {
     color: #54595F;
-    font-family: 'Rubik';
     font-weight: normal;
     font-size: 14px;
     line-height: 12px;
@@ -41,5 +58,4 @@
     margin-top: -2rem;
     z-index: 2;
   }
-
 }
