--- a/client/src/pages/SorterPage/Main/Class.scss
+++ b/client/src/pages/SorterPage/Main/Class.scss
@@ -5,6 +5,10 @@
   padding-bottom: 1rem;
   width: 20rem;
 
+  .header {
+    display: inline-flex;
+  }
+
   .partner-name {
     color: #202E47;
     font-weight: bold;
@@ -12,23 +16,14 @@
     padding: 2rem 2rem 0rem;
   }
 
+  .lock {
+    float: right;
+    padding: 1rem;
+    z-index: 2;
+  }
+
   .class-info {
     padding-bottom: 1rem;
     margin-left: 2rem;
-  }
-
-  .instructor {
-    background-color: #F2F5F7;
-    margin: 0rem 2rem 1rem 2rem;
-    border-radius: 10px;
-    height: auto;
-    color: #202E47;
-    font-weight: 600;
-    font-size: 18px;
-    padding: 10px 20px;
-  }
-
-  .instructor:hover {
-    background-color: #e7e9eb;
   }
 }
