remove availability from sorter instructor cards

--- a/client/src/pages/SorterPage/Instructor.scss
+++ b/client/src/pages/SorterPage/Instructor.scss
@@ -42,16 +42,16 @@
     margin-right: 0.5rem;
   }
   
-  .pref {
-    margin-bottom: 1rem;
-  }
+  // .pref {
+  //   margin-bottom: 1rem;
+  // }
 
-  .availability h5 {
-    color: #54595F;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 12px;
-  }
+  // .availability h5 {
+  //   color: #54595F;
+  //   font-weight: normal;
+  //   font-size: 14px;
+  //   line-height: 12px;
+  // }
 
   .edit-icon {
     float: right;
