--- a/client/src/pages/SorterPage/Instructor.scss
+++ b/client/src/pages/SorterPage/Instructor.scss
@@ -24,13 +24,17 @@
     padding: -1rem;
     z-index: 2;
   }
-
+  
+  .pref {
+    margin-bottom: 1rem;
+  }
+  
   .tags {
     display: flex;
     font-weight: normal;
     font-size: 14px;
     text-align: center;
-    margin-bottom: 1rem;
+    margin-bottom: 0.5rem;
   }
 
   .tag {
@@ -41,10 +45,6 @@
     padding: 3px 10px;
     margin-right: 0.5rem;
   }
-  
-  // .pref {
-  //   margin-bottom: 1rem;
-  // }
 
   // .availability h5 {
   //   color: #54595F;
