prevent dragging locked instructors, add loading animations, bug fixes

--- a/client/src/pages/SorterPage/Instructor.scss
+++ b/client/src/pages/SorterPage/Instructor.scss
@@ -19,7 +19,7 @@
     margin-bottom: 1rem;
   }
 
-  .lock {
+  .instructor-lock {
     float: right;
     padding: -1rem;
     z-index: 2;
@@ -45,13 +45,6 @@
     padding: 3px 10px;
     margin-right: 0.5rem;
   }
-
-  // .availability h5 {
-  //   color: #54595F;
-  //   font-weight: normal;
-  //   font-size: 14px;
-  //   line-height: 12px;
-  // }
 
   .edit-icon {
     float: right;
