--- a/client/src/pages/SorterPage/Main/AssignInstructorsTable.scss
+++ b/client/src/pages/SorterPage/Main/AssignInstructorsTable.scss
@@ -1,7 +1,11 @@
+@import '../../../DesignSystem';
+
 .assn-instructor-row{
-    
-    border-radius: 10px;
-    background-color: #F5F5F5;
+ 
+    background: #f5f5f5;
+    text-align: center;
+    border-spacing: 0 0.5rem;
+    border-collapse: separate;
 
     &:hover {
       background: #f5f5f5;
@@ -9,10 +13,7 @@
       cursor: pointer;
     }
     
-    td{
-      border-collapse:  separate;
-      border-spacing: 10px;
-    }
+
       
     td:first-child {
       border-radius: 10px 0 0 10px;
@@ -22,9 +23,27 @@
       border-radius: 0 10px 10px 0;
       
     }
-
+  
       
 }
+
+
+.assn-table {
+  padding: 0 5rem;
+
+  table {
+    text-align: center;
+    border-spacing: 0 0.5rem;
+    border-collapse: separate;
+
+    
+  }
+}
+
+
+
+
+
 
 .row-spacer{
   height:10px;
@@ -40,3 +59,4 @@
 .assn-table-heading{
     color: #999999;
 }
+
