--- a/client/src/pages/SorterPage/Main/AssignInstructorsTable.scss
+++ b/client/src/pages/SorterPage/Main/AssignInstructorsTable.scss
@@ -35,9 +35,15 @@
     text-align: center;
     border-spacing: 0 0.5rem;
     border-collapse: separate;
+    
 
     
   }
+  
+}
+
+.sched{
+    width:300px;   
 }
 
 
