adding clickability to rows
rows are now clickable

--- a/client/src/pages/SorterPage/Main/AssignInstructorsTable.scss
+++ b/client/src/pages/SorterPage/Main/AssignInstructorsTable.scss
@@ -6,12 +6,15 @@
     text-align: center;
     border-spacing: 0 0.5rem;
     border-collapse: separate;
+    
 
-    &:hover {
-      background: #f5f5f5;
-      transition: background 0.2s;
-      cursor: pointer;
-    }
+   
+
+    // &:hover {
+    //   background: #f5f5f5;
+    //   transition: background 0.2s;
+    //   cursor: pointer;
+    // }
     
 
       
@@ -26,6 +29,7 @@
   
       
 }
+
 
 
 .assn-table {
@@ -70,3 +74,35 @@
 {
   width: 200px;
 }
+
+.assn-instructor-row-active{    
+  outline: 3px solid #28A745;
+  border-radius: 10px 10px 10px 10px;
+  background: #f5f5f5;
+  text-align: center;
+  border-spacing: 0 0.5rem;
+  border-collapse: separate;
+  
+
+   
+
+  &:hover {
+    background: #f5f5f5;
+    transition: background 0.2s;
+    cursor: pointer;
+  }
+  
+
+      
+  td:first-child {
+    border-radius: 10px 0 0 10px;
+    
+  }
+  td:last-child {
+    border-radius: 0 10px 10px 0;
+    
+  }
+
+     
+  }   
+  
