--- a/client/src/pages/SorterPage/Main/Class.scss
+++ b/client/src/pages/SorterPage/Main/Class.scss
@@ -1,3 +1,27 @@
+
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  padding: 10px 0px 5px 10px;
+  display: none;
+  position: absolute;
+  background-color: #fbfbfb;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  border-radius: 5px;
+}
+
+
+.dropdown-content a:hover {background-color: #ddd;}
+
+.dropdown:hover .dropdown-content {display: block;}
+
+
 .class {
   background-color: #FFFFFF;
   margin: 1rem;
