--- a/client/src/pages/SorterPage/Main/Class.scss
+++ b/client/src/pages/SorterPage/Main/Class.scss
@@ -14,6 +14,9 @@
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
   border-radius: 5px;
+  border-width: thin;
+  border-style: solid;
+  border-color: #C0C4D9;
 }
 
 
