--- a/client/src/pages/InstructorsPage/Instructors.scss
+++ b/client/src/pages/InstructorsPage/Instructors.scss
@@ -63,3 +63,23 @@ h6 {
   font-style: italic;
   font-size: 0.75rem;
 }
+
+// /* essentially changes the appearance of the checkbox to look more like a generic bar */
+input[type=checkbox].checkbox {
+  // /* this clears all "native" appearances for checkboxes */
+  all: unset; 
+  height: 4em;
+  width: 4em;
+  margin-top: -0.675em;
+  margin-bottom: -1.05em;
+  display: inline-block;
+  background: white;
+  border-radius:10%;
+  outline: 0.05em solid #3e404648;
+}
+
+
+input[type=checkbox]:checked.checkbox {
+  background: #28A745;
+  
+}
